k8s/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: panoptes
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: panoptes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
